[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/atlas/atlas.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 9.51062 )

[sub_resource type="Animation" id=2]

resource_name = "Idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 320, 45, 19, 21 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "Jump"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 39, 43, 23, 21 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "Run"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 320, 45, 19, 21 ), Rect2( 391, 44, 18, 22 ), Rect2( 427, 44, 18, 22 ), Rect2( 463, 43, 17, 22 ), Rect2( 6, 78, 18, 22 ), Rect2( 40, 77, 20, 22 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
GRAVITY = 250
MAX_FALLING_SPEED = 40
MOVE_SPEED = 125
MOVE_SPEED_TIME_NEEDED = 0.2
DECELERATION_TIME_NEEDED = 0.2
MAX_JUMP_POWER = 180
MIN_JUMP_POWER = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 2.03281, 1.00267 )
scale = Vector2( 0.752404, 1.00165 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 320, 45, 19, 21 )
_sections_unfolded = [ "Animation", "Region" ]

[node name="anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Run = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="timerDialog" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="labelDialog" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = -27.0
margin_right = 64.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Visibility", "custom_fonts" ]

[connection signal="timeout" from="timerDialog" to="." method="_on_timerDialog_timeout"]


